<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="500dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Orange800"
                android:paddingBottom="@dimen/activity_half_horizontal_margin"
                android:paddingTop="@dimen/activity_half_horizontal_margin"
                android:text="@string/sign_up_text"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="@dimen/main_xlarge_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_half_horizontal_margin"
                android:background="@color/bg_color"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/Orange100"
                    android:text="이메일(ID)"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/activity_half_horizontal_margin"
                    android:paddingRight="@dimen/activity_half_horizontal_margin"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/main_black"
                    android:textColorHint="@color/Grey400"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_half_horizontal_margin"
                android:background="@color/Orange100"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/bg_color"
                    android:text="암호"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pw_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/pw_edit_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/activity_half_horizontal_margin"
                    android:paddingRight="@dimen/activity_half_horizontal_margin"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/main_black"
                    android:textColorHint="@color/Grey400"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_half_horizontal_margin"
                android:background="@color/bg_color"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/bg_color"
                    android:text="암호 확인"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pw2_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/pw2_edit_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/activity_half_horizontal_margin"
                    android:paddingRight="@dimen/activity_half_horizontal_margin"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/main_black"
                    android:textColorHint="@color/Grey400"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_half_horizontal_margin"
                android:background="@color/bg_color"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/bg_color"
                    android:text="닉네임"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nick_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/nick_edit_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/activity_half_horizontal_margin"
                    android:paddingRight="@dimen/activity_half_horizontal_margin"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/main_black"
                    android:textColorHint="@color/Grey400"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_half_horizontal_margin"
                android:background="@color/bg_color"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/signup_back_bt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_button_grey"
                    android:text="이전"
                    android:textColor="@color/White"
                    android:textSize="@dimen/main_large_text_size" />

                <Button
                    android:id="@+id/signup_next_bt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_half_horizontal_margin"
                    android:background="@drawable/border_button_orange"
                    android:text="다음"
                    android:textColor="@color/White"
                    android:textSize="@dimen/main_large_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>