<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="500dp"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Orange800"
                android:paddingBottom="@dimen/activity_half_horizontal_margin"
                android:paddingTop="@dimen/activity_half_horizontal_margin"
                android:text="@string/service_login_text"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="@dimen/main_xlarge_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_half_horizontal_margin"
                android:background="@color/bg_color"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/login_email_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/bg_color"
                    android:text="이메일(ID)"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_email_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/activity_half_horizontal_margin"
                    android:paddingRight="@dimen/activity_half_horizontal_margin"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/main_black"
                    android:textColorHint="@color/Grey400"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:background="@color/bg_color"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/login_pw_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/bg_color"
                    android:text="암호"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_large_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_pw_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/pw_edit_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/activity_half_horizontal_margin"
                    android:paddingRight="@dimen/activity_half_horizontal_margin"
                    android:paddingTop="4dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/Grey900"
                    android:textColorHint="@color/Grey700"
                    android:textSize="@dimen/main_large_text_size" />
            </LinearLayout>


            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border_button_orange"
                android:text="로그인"
                android:textSize="@dimen/main_large_text_size" />

            <Button
                android:id="@+id/naver_login_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_button_green"
                android:text="네이버 ID로 로그인"
                android:textSize="@dimen/main_large_text_size" />

            <Button
                android:id="@+id/kakao_login_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_button_yellow"
                android:text="카카오톡 ID로 로그인"
                android:textSize="@dimen/main_large_text_size" />

            <Button
                android:id="@+id/join_btn"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_button_orange"
                android:text="회원가입"
                android:textSize="@dimen/main_large_text_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>