<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="500dp"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange800"
        android:padding="@dimen/activity_half_horizontal_margin"
        android:text="@string/set_category_text"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="@dimen/main_xlarge_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange100"
        android:orientation="vertical"
        android:padding="@dimen/activity_half_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_half_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/bg_color"
                android:text="종류"
                android:textColor="@color/main_black"
                android:textSize="@dimen/main_large_text_size"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:background="@drawable/bg_spinner"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/callingplan_sp1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_middle_text_size"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_quarter_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/top_down"
                    android:background="@color/White"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_half_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/bg_color"
                android:text="분류"
                android:textColor="@color/main_black"
                android:textSize="@dimen/main_large_text_size"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:background="@drawable/bg_spinner"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/callingplan_sp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_middle_text_size"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_quarter_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/top_down"
                    android:background="@color/White"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_half_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/bg_color"
                android:text="세부"
                android:textColor="@color/main_black"
                android:textSize="@dimen/main_large_text_size"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:background="@drawable/bg_spinner"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/callingplan_sp3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_middle_text_size"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_quarter_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/top_down"
                    android:background="@color/White"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_half_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/bg_color"
                android:text="@string/year_text"
                android:textColor="@color/main_black"
                android:textSize="@dimen/main_large_text_size"
                android:textStyle="bold" />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:background="@drawable/bg_spinner"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/year_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@color/transparent"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/main_middle_text_size"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_quarter_horizontal_margin"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/top_down"
                    android:background="@color/White"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_half_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/bg_color"
                android:text="@string/class_text"
                android:textColor="@color/main_black"
                android:textSize="@dimen/main_large_text_size"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/class_linear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="0dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_half_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/class_back_bt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/border_button_blue"
                android:text="이전"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/class_next_bt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/activity_half_horizontal_margin"
                android:background="@drawable/border_button_orange"
                android:text="완료"
                android:textColor="@color/White" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>